--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,6 +1,12 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:base"
-  ]
+  $schema: 'https://docs.renovatebot.com/renovate-schema.json',
+  extends: ['config:base'],
+  lockFileMaintenance: {
+    enabled: true,
+    extends: ['schedule:weekly'],
+    automerge: true,
+  },
+  nix: {
+    enabled: true,
+  },
 }
