--- a/example/package.json
+++ b/example/package.json
@@ -11,9 +11,11 @@
   ],
   "dependencies": {
     "@fontsource/roboto-slab": "^5.0.0",
-    "@fortawesome/fontawesome-free": "^6.3.0"
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "copperflame": "github:nzbr/copperflame"
   },
   "devDependencies": {
-    "parcel": "^2.8.3"
+    "parcel": "2.8.3",
+    "@parcel/transformer-sass": "2.8.3"
   }
 }
